--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li><span>2020.04 ~ 2021.05</span></li>
                         <li>
                             <div class="btn-area">
-                                <a href="https://www.kpc.or.kr/" target="_blank" >한국생산성본부 바로가기</a>
+                                <a href="https://www.kpc.or.kr/" target="_blank" >한국생산성본부</a>
                             </div>
                         </li>
                     </ul>
@@ -81,7 +81,8 @@
                         <li><span>2022.05 ~ 2022.06</span></li>
                         <li>
                             <div class="btn-area">
-                                <a href="https://www.mobon.net/main/m2/" target="_blank" >모비온 바로가기</a>
+                                <a href="https://www.mobon.net/main/m2/" target="_blank" >모비온</a>
+                                <a href="https://www.youtube.com/watch?v=vSalRkqhydM" target="_blank" >관리자페이지 <span>_작업화면에 관한 영상</span></a>
                             </div>
                         </li>
                     </ul>
@@ -124,7 +125,7 @@
                         <li><span>2021.09 ~ 2021.10</span></li>
                         <li>
                             <div class="btn-area">
-                                <a href="http://leadit.co.kr/" target="_blank">리드정보기술 바로가기</a>
+                                <a href="http://leadit.co.kr/" target="_blank">리드정보기술</a>
                             </div>
                         </li>
                     </ul>
@@ -142,7 +143,7 @@
                         <li><span>2022.10</span></li>
                         <li>
                             <div class="btn-area">
-                                <a href="./content/index.html" target="_blank">uni1ID 바로가기</a>
+                                <a href="./content/index.html" target="_blank">uni1ID</a>
                             </div>
                         </li>
                     </ul>
