--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h3>한국생산성본부</h3>
                 <span>20.04-21.05</span>
                 <p>
-                    - 4개의 플랫폼을 구축하는 14개월의 장기 개발 프로젝트<br>
+                    - 교육생,강사,기업,관리자 4개의 플랫폼을 구축하는 14개월의 장기 개발 프로젝트<br>
                     - 전체 플랫폼의 반응형 퍼블리싱 작업<br>
                     - 애니메이션, 스크롤 이벤트 등 다양한 인터렉션이 들어간 화면을 구성<br>
                     - jsp 내 마크업 및 스크립트 수정한 파일을 svn을 통해 공유하여 개발자들과 협업<br>
