--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/favicon.png">
-    <title>Enliple AI Lab</title>
+    <link rel="shortcut icon" href="./image/logo.png">
+    <title>HanAhreum</title>
     <link rel="stylesheet" href="./css/style.css">
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script src="./js/common.js"></script>
@@ -43,7 +43,7 @@
                         <div class="animateFadeList">
                             <li class="start now">
                                 <div class="fadeCont">
-                                    <h3>인라이플AI</h3>
+                                    <h3>인라이플AI연구소 홈페이지</h3>
                                     <span>23.05-23.06</span>
                                     <p>
                                         - 애니메이션
