--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="center">
                 <h1><span>한아름</span></h1>
                 <ul class="pageMenu">
-                    <li><span>Portfolio</span></li>
-                    <li><span>Publising</span></li>
-                    <li><span>Contact</span></li>
+                    <li><button type="button">Portfolio</button></li>
+                    <li><button type="button">Publising</button></li>
+                    <li><button type="button">Contact</button></li>
                 </ul>
             </div>
         </header>
@@ -29,15 +29,16 @@
                 <div class="scrollBox">
                     <div class="center">
                         <p>
-                            <span class="animateTyping">Grow your</span>
-                            <span class="animateTyping02">Company to</span>
-                            <span class="animateTyping03">it's full potential with AI</span>
+                            <span class="animateTyping">안녕하세요</span>
+                            <span class="animateTyping02">11</span>
+                            <span class="animateTyping03">22</span>
                         </p>
                     </div>
                 </div>
             </section>
             <section class='page main02'>
                 <div class="scrollBox progressBarBox animateFadeBox">
+                    <h2>Portfolio</h2>
                     <span class="progressBar" data-progressname="Portfolio"><span><i></i></span></span>
                     <div class="center animateFadeWrap">
                         <div class="animateFadeList">
