--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <div class='container main'>
-        <header class="white">
+        <header>
             <div class="center">
-                <h1><span>한아름</span></h1>
+                <h1><span>HanAhreum</span></h1>
                 <ul class="pageMenu">
                     <li><button type="button">Portfolio</button></li>
                     <li><button type="button">Publising</button></li>
@@ -29,9 +29,9 @@
                 <div class="scrollBox">
                     <div class="center">
                         <p>
-                            <span class="animateTyping">안녕하세요</span>
-                            <span class="animateTyping02">11</span>
-                            <span class="animateTyping03">22</span>
+                            <span class="animateTyping">안녕하세요.</span>
+                            <span class="animateTyping02">웹퍼블리셔</span>
+                            <span class="animateTyping03">한아름 입니다.</span>
                         </p>
                     </div>
                 </div>
@@ -44,22 +44,27 @@
                         <div class="animateFadeList">
                             <li class="start now">
                                 <div class="fadeCont">
-                                    <h3>인라이플AI연구소 홈페이지</h3>
-                                    <span>23.05-23.06</span>
-                                    <p>
-                                        - 애니메이션
-                                    </p>
-                                    <ul>
-                                        <li><span>html · css · jquery · javascript </span></li>
-                                        <li><span>반응형 퍼블리싱 100% </span> </li>
-                                    </ul>
-                                    <div class="btnWrap">
-                                        <a href="https://www.enliple.com/business/ai/ai" target="_blank">메인홈페이지</a>
+                                    <img src="./image/img_port_hlcash.png" alt="화면이미지">
+                                    <div class="txtBox">
+                                        <h3>인라이플AI연구소 홈페이지</h3>
+                                        <span>23.05-23.06</span>
+                                        <p>
+                                            - 애니메이션
+                                        </p>
+                                        <ul>
+                                            <li><span>html · css · jquery · javascript </span></li>
+                                            <li><span>반응형 퍼블리싱 100% </span> </li>
+                                        </ul>
+                                        <div class="btnWrap">
+                                            <a href="https://www.enliple.com/business/ai/ai" target="_blank">메인홈페이지</a>
+                                        </div>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_kpc.png" alt="화면이미지">
+                                    <div class="txtBox">
                                     <h3>한국생산성본부</h3>
                                     <span>20.04-21.05</span>
                                     <p>
@@ -76,10 +81,13 @@
                                     <div class="btnWrap">
                                         <a href="https://www.kpc.or.kr/" target="_blank">메인홈페이지</a>
                                     </div>
+                                    </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_mobon.png" alt="화면이미지">
+                                    <div class="txtBox">
                                     <h3>모비온</h3>
                                     <span>22.05-22.06</span>
                                     <p>
@@ -98,10 +106,13 @@
                                         <a href="https://www.youtube.com/watch?v=vSalRkqhydM" target="_blank">관리자페이지
                                             <span>_작업화면에 관한 영상</span></a>
                                     </div>
+                                    </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_bigstock.png" alt="화면이미지">
+                                    <div class="txtBox">
 
                                     <h3>빅스탁</h3>
                                     <span>23.03</span>
@@ -116,10 +127,13 @@
                                     <div class="btnWrap">
                                         <a href="http://www.big-stock.co.kr/" target="_blank">메인홈페이지</a>
                                     </div>
+                                    </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_1pay.png" alt="화면이미지">
+                                    <div class="txtBox">
                                     <h3>1pay</h3>
                                     <span>22.10-23.02</span>
                                     <p>
@@ -135,10 +149,13 @@
                                     <div class="btnWrap">
                                         <a href="https://www.my1pay.com/" target="_blank">메인홈페이지</a>
                                     </div>
+                                    </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_mobwith.png" alt="화면이미지">
+                                    <div class="txtBox">
                                     <h3>모비위드애드</h3>
                                     <span>22.03-22.08</span>
                                     <p>
@@ -155,27 +172,33 @@
                                         <a href="https://www.whowhoad.com/" target="_blank">후후애드</a>
                                         <a href="https://www.liveread.co.kr/" target="_blank">라이브리애드</a>
                                     </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fadeCont">
-                                    <h3>힐링캐시</h3>
-                                    <span>22.08</span>
-                                    <p>
-                                        - 힐링캐시 소개페이지 반응형 퍼블리싱<br>
-                                        - skicy 스크롤 이벤트 구현
-                                    </p>
-                                    <ul>
-                                        <li><span>html · css · scss · javascript</span></li>
-                                        <li><span>반응형 퍼블리싱 100%</span> </li>
-                                    </ul>
-                                    <div class="btnWrap">
-                                        <a href="https://healingcash.co.kr/" target="_blank">메인홈페이지</a>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="fadeCont">
+                                    <img src="./image/img_port_hlcash.png" alt="화면이미지">
+                                    <div class="txtBox">
+                                        <h3>힐링캐시</h3>
+                                        <span>22.08</span>
+                                        <p>
+                                            - 힐링캐시 소개페이지 반응형 퍼블리싱<br>
+                                            - skicy 스크롤 이벤트 구현
+                                        </p>
+                                        <ul>
+                                            <li><span>html · css · scss · javascript</span></li>
+                                            <li><span>반응형 퍼블리싱 100%</span> </li>
+                                        </ul>
+                                        <div class="btnWrap">
+                                            <a href="https://healingcash.co.kr/" target="_blank">메인홈페이지</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="fadeCont">
+                                    <img src="./image/img_port_lead.png" alt="화면이미지">
+                                    <div class="txtBox">
                                     <h3>리드정보기술</h3>
                                     <span>21.10</span>
                                     <p>
@@ -189,6 +212,7 @@
                                     </ul>
                                     <div class="btnWrap">
                                         <a href="http://leadit.co.kr/" target="_blank">메인홈페이지</a>
+                                    </div>
                                     </div>
                                 </div>
                             </li>
@@ -206,6 +230,9 @@
                             <li><a href="#">관리자</a></li>
                             <li><a href="#">위젯대시보드</a></li>
                         </ul>
+                        <p>
+                            개인작
+                        </p>
                     </div>
                 </div>
             </section>
@@ -213,7 +240,6 @@
                 <div class="scrollBox">
                     <div class="center">
                         <h2>Contact</h2>
-                        이름, 연락처
                         <div>
                             <strong>Profile</strong>
                             <ul>
@@ -237,7 +263,7 @@
                 <div class="scrollBox">
                     <div class="center">
                         <div class="copyright">
-                            Copyright(c) ENLIPLE All rights reserved.
+                            Copyright(c) HanAhreum All rights reserved.
                         </div>
                     </div>
                 </div>
@@ -246,34 +272,11 @@
     </div>
     <script>
         $(document).ready(function () {
-            $('.main01').trigger('click');
-            setTimeout(() => {
-                $('.main01 .balckBG span').addClass('on');
-            }, 2000);
             $(window).on('wheel touchend', function () {
-                if ($('.main01').hasClass('now') == true || $('.main04').hasClass('now') == true) {
+                if ($('.main03').hasClass('now') == true) {
                     $('header').addClass('white');
                 } else {
                     $('header').removeClass('white');
-                }
-                if ($('.main01').hasClass('now') == true) {
-                    $('.main01 .balckBG').removeClass('active').addClass('on');
-                } else {
-                    $('.main01 .balckBG').removeClass('on').addClass('active');
-                }
-                if ($('.main02').hasClass('now') == true) {
-                    $('.main02 .animateTxtFill li').eq(0).addClass('now')
-                    $('.main02 .animateTxtFill li').eq(0).find('.fadeCont').addClass('on');
-                    if ($('.main02 .animateTxtFill li').eq(0).find('input[type="checkbox"]').prop(
-                            "checked") == false) {
-                        $('.main02 .animateTxtFill li').eq(0).find('input[type="checkbox"]').prop(
-                            'checked', true).trigger("change");
-
-                    }
-                }
-                if ($('.main04').hasClass('now') == true) {
-                    $('.main04 .balckBG').addClass('on');
-                    $('.main04').addClass('on');
                 }
             });
             $('.topBtn').on('click', function () {
@@ -303,9 +306,9 @@
         function wait(ms) {
             return new Promise(resolve => setTimeout(resolve, ms))
         }
-        typingAni(".animateTyping", 100, 2500);
-        typingAni(".animateTyping02", 100, 4000);
-        typingAni(".animateTyping03", 60, 5800);
+        typingAni(".animateTyping", 120, 800);
+        typingAni(".animateTyping02", 100, 3000);
+        typingAni(".animateTyping03", 120, 4800);
     </script>
 </body>
 
