--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                                                 - 교육생,강사,기업,관리자 4개의 플랫폼을 구축하는 14개월의 장기 개발 프로젝트<br>
                                                 - 전체 플랫폼의 반응형 퍼블리싱 작업<br>
                                                 - 애니메이션, 스크롤 이벤트 등 다양한 인터렉션이 들어간 화면을 구성<br>
+                                                <span class="pc_br">
                                                 - jsp 내 마크업 및 스크립트 수정한 파일을 svn을 통해 공유하여 개발자들과 협업<br>
-                                                - 서브 페이지, 플랫폼 페이지, 학습창과 플레이어 등 서브 디자인 담당
+                                                - 서브 페이지, 플랫폼 페이지, 학습창과 플레이어 등 서브 디자인 담당</span>
                                             </p>
                                             <ul>
                                                 <li><span>html · css · jquery · javascript · svn</span></li>
@@ -109,10 +110,14 @@
                                         </div>
                                         <div>
                                             <p>
+                                                <span class="pc_br">
                                                 - 자사 홈페이지를 전체 리뉴얼하며 반응형페이지로 퍼블리싱<br>
+                                                </span>
                                                 - vw, rem단위와 svg를 이용하여 어느 디바이스에서나 동일한 화면 작업<br>
                                                 - 라이브러리가 제공하지않는 디자인의 슬라이드,탭도 직접 스크립트 작성하여 구현<br>
+                                                <span class="pc_br">
                                                 - php의 마크업과 스크립트 수정 후 git을 통해 공유하며 개발자와 협업<br>
+                                                </span>
                                                 - 내부 관리자페이지 리뉴얼 및 고도화, gridstack 활용하여 위젯 대시보드 구현
                                             </p>
                                             <ul>
@@ -167,7 +172,9 @@
                                         </div>
                                         <div>
                                             <p>
+                                                <span class="pc_br">
                                                 - 1pay 서비스의 화면 전체 반응형 퍼블리싱<br>
+                                                </span>
                                                 - vw, rem단위와 svg를 이용하여 어느 디바이스에서나 동일한 화면 작업<br>
                                                 - 달력 입력 값, 페이지 이동 등 화면 동작 스크립트 작업<br>
                                                 - 이메일 등 html 작업
